--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 		<div class="reveal">
 			<div class="slides">
                 <section data-markdown="cpp17_features/00_intro.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-
                 <section data-markdown="cpp17_features/01_language_structured_bindings.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+
+                <section data-markdown="cpp17_features/03_language_compile-time_conditional_statements.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 			</div>
 		</div>
 
