Add sections on vocabulary types.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<div class="slides">
                 <section data-markdown="cpp17_features/00_intro.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 
+                <!-- Part 1: Language -->
                 <section data-markdown="cpp17_features/01_language_structured_bindings.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/02_language_selection_statements_with_initializers.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/03_language_compile-time_conditional_statements.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
@@ -53,6 +54,12 @@
                 <section data-markdown="cpp17_features/11_language_guaranteed_copy_elision.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/12_language_nested_namespace_definitions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/13_language_preprocessor_predicate_for_header_testing.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+
+                <!-- Part 2: Library -->
+                <section data-markdown="cpp17_features/30_library_string_view.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/31_library_optional.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/32_library_variant.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/33_library_any.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 
 			</div>
 		</div>
