--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <section data-markdown="cpp17_features/02_language_selection_statements_with_initializers.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/03_language_compile-time_conditional_statements.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/04_language_fold_expressions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-
+                <section data-markdown="cpp17_features/05_language_class_template_deduction.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/06_language_auto_non_type_template_parameters.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/07_language_inline_variables.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/08_language_constexpr_lambdas.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
@@ -60,6 +60,7 @@
                 <section data-markdown="cpp17_features/31_library_optional.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/32_library_variant.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/33_library_any.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/34_library_parallel_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 
 			</div>
 		</div>
