--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 <section data-markdown="cpp17_features/32_library_variant.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/33_library_any.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/34_library_parallel_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/35_library_new_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+
+                <section data-markdown="cpp17_features/38_aligned_new.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/39_improved_insertion_and_splicing_for_associative_containers.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/40_math_special_functions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/41_variable_templates_for_metafunctions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/42_boolean_logic_metafunctions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 
 			</div>
 		</div>
