Updates for June 2018 ACCU London talk.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="css/custom.css">
 
         <!-- Theme used for syntax highlighting of code -->
-        <link rel="stylesheet" href="lib/css/zenburn.css">
+        <!--<link rel="stylesheet" href="lib/css/zenburn.css">-->
+        <link rel="stylesheet" href="lib/css/grayscale_black.css">
 
         <!-- Printing and PDF exports -->
         <script>
@@ -46,21 +47,25 @@
                 <section data-markdown="cpp17_features/02_language_selection_statements_with_initializers.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/03_language_compile-time_conditional_statements.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/04_language_fold_expressions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/05_language_class_template_deduction.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+                <section data-markdown="cpp17_features/05_language_class_template_argument_deduction.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/06_language_auto_non_type_template_parameters.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/07_language_inline_variables.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/08_language_constexpr_lambdas.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 <script>
 //                <section data-markdown="cpp17_features/09_language_lambda_capture_of_star_this_by_value.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+//                <section data-markdown="cpp17_features/10_language_unary_static_assert.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 </script>
-                <section data-markdown="cpp17_features/10_language_unary_static_assert.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/11_language_guaranteed_copy_elision.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/12_language_nested_namespace_definitions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/13_language_preprocessor_predicate_for_header_testing.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+<script>
+//                <section data-markdown="cpp17_features/13_language_preprocessor_predicate_for_header_testing.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+</script>
 
                 <section data-markdown="cpp17_features/00_overview.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/00_intro.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/00_overview.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+<script>
+//                <section data-markdown="cpp17_features/00_intro.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+//                <section data-markdown="cpp17_features/00_overview.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+</script>
 
                 <!-- Part 2: Library -->
                 <section data-markdown="cpp17_features/30_library_string_view.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
@@ -68,14 +73,16 @@
                 <section data-markdown="cpp17_features/32_library_variant.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/33_library_any.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/34_library_parallel_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-<script>
-//                <section data-markdown="cpp17_features/35_library_new_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-</script>
+                <section data-markdown="cpp17_features/35_library_new_algorithms.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/36_library_filesystem_support.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/37_polymorphic_allocators_and_memory_resources.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/38_aligned_new.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+<script>
+//                <section data-markdown="cpp17_features/37_polymorphic_allocators_and_memory_resources.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+//                <section data-markdown="cpp17_features/38_aligned_new.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+</script>
                 <section data-markdown="cpp17_features/39_improved_insertion_and_splicing_for_associative_containers.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
-                <section data-markdown="cpp17_features/40_math_special_functions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+<script>
+//                <section data-markdown="cpp17_features/40_math_special_functions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+</script>
                 <section data-markdown="cpp17_features/41_variable_templates_for_metafunctions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
                 <section data-markdown="cpp17_features/42_boolean_logic_metafunctions.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 
